# mx20022

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  deny.toml  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/mx20022/: Cargo.toml
crates/mx20022-cli/: Cargo.toml
crates/mx20022-cli/src/: main.rs
crates/mx20022-cli/src/commands/: codegen.rs  inspect.rs  mod.rs  translate.rs  validate.rs
crates/mx20022-cli/tests/: cli_integration.rs
crates/mx20022-codegen/: Cargo.toml
crates/mx20022-codegen/src/: lib.rs  main.rs
crates/mx20022-codegen/src/emit/: builders.rs  code_enums.rs  enums.rs  mod.rs  newtypes.rs  opaque.rs  pattern_codegen.rs  structs.rs  util.rs  validate.rs  value_with_attr.rs
crates/mx20022-codegen/src/ir/: lower.rs  mod.rs  types.rs
crates/mx20022-codegen/src/xsd/: mod.rs  parser.rs  types.rs
crates/mx20022-codegen/tests/: snapshots.rs
crates/mx20022-codegen/tests/snapshots/: snapshots__camt_053_001_11_emit.snap  snapshots__head_001_001_04_emit.snap  snapshots__pacs_008_001_13_emit.snap
crates/mx20022-model/: Cargo.toml
crates/mx20022-model/src/: lib.rs
crates/mx20022-model/src/common/: builder.rs  choice.rs  mod.rs  validate.rs
crates/mx20022-model/tests/: builder_test.rs  newtype_validation.rs
crates/mx20022-parse/: Cargo.toml
crates/mx20022-parse/benches/: parse_bench.rs
crates/mx20022-parse/src/: de.rs  envelope.rs  error.rs  lib.rs  ser.rs
crates/mx20022-parse/tests/: roundtrip.rs  roundtrip_all.rs
crates/mx20022-translate/: Cargo.toml
crates/mx20022-translate/benches/: translate_bench.rs
crates/mx20022-translate/src/: lib.rs
crates/mx20022-translate/src/mappings/: camt053_to_mt940.rs  charset.rs  error.rs  helpers.rs  mod.rs  mt103_to_pacs008.rs  mt202_to_pacs009.rs  mt940_to_camt053.rs  pacs008_to_mt103.rs  pacs009_to_mt202.rs
crates/mx20022-translate/src/mt/: error.rs  mod.rs  parser.rs  types.rs
crates/mx20022-translate/src/mt/fields/: common.rs  mod.rs  mt103.rs  mt202.rs  mt940.rs
crates/mx20022-translate/tests/: mt_parser.rs  translation.rs
crates/mx20022-validate/: Cargo.toml
crates/mx20022-validate/benches/: validate_bench.rs
crates/mx20022-validate/src/: error.rs  lib.rs  typed.rs
crates/mx20022-validate/src/rules/: amount.rs  bic.rs  checkdigit.rs  country.rs  currency.rs  datetime.rs  iban.rs  lei.rs  length.rs  mod.rs  pattern.rs
crates/mx20022-validate/src/schema/: constraints.rs  mod.rs
crates/mx20022-validate/src/schemes/: cbpr.rs  common.rs  fednow.rs  mod.rs  sepa.rs  xml_scan.rs
crates/mx20022-validate/tests/: integration.rs  schemes.rs
crates/mx20022/examples/: parse_pacs008.rs  roundtrip.rs  translate_mt103.rs  validate_message.rs
crates/mx20022/src/: lib.rs
docs/: agent-context-schema.sql  agent_context.db  executive-summary.md  migrate-context-v1.sh  prd-phase1.md  seed-context.sql
docs/agents/: 2026-03-02T00-00-00Z__ir-type-graph__rust.json  2026-03-02T00-00-00Z__release-ci-hardening__rust.json  2026-03-02T17-00-00Z__mx20022-validate__rust.json  2026-03-02T18-00-00Z__business-rule-validation__rust.json  2026-03-02T18-30-00Z__code-emitter__rust.json  2026-03-02T18-52-00Z__mx20022-cli__rust.json  2026-03-02T19-00-00Z__builder-api__rust.json  2026-03-02T19-40-00Z__xml-fixtures-roundtrip__rust.json  2026-03-02T20-00-00Z__mt-parser__rust.json  2026-03-02T21-30-00Z__examples-benchmarks__rust.json  2026-03-02T22-00-00Z__mt-mx-translation__rust.json  2026-03-02T23-45-48Z__mx20022-parse__rust.json  2026-03-03T00-00-00Z__arch-review__ar.json  2026-03-03T00-00-00Z__perf-analysis__perf.json  2026-03-03T00-00-00Z__security-audit__sec.json  2026-03-03T00-00-00Z__test-coverage-audit__ta.json  2026-03-04T00-00-00Z__arch-review__ar.json  2026-03-04T00-00-00Z__mt940-block2-fix__gtg.json  2026-03-04T00-00-00Z__security-audit__sec.json  2026-03-04T00-00-00Z__test-coverage-audit__ta.json  2026-03-04T00-00-01Z__perf-analysis__perf.json  2026-03-04T00-10-33Z__code-quality-review__cr.json  2026-03-04T01-00-00Z__arch-review__ar.json  2026-03-04T01-00-00Z__perf-analysis__perf.json  2026-03-04T01-00-00Z__security-audit__sec.json  2026-03-04T12-00-00Z__code-quality-review__cr.json  2026-03-05T00-00-00Z__perf-analysis__perf.json  2026-03-05T04-21-31Z__test-coverage-audit__ta.json  2026-03-05T04-22-43Z__code-quality-review__cr.json  2026-03-05T08-17-05Z__code-quality-review__cr.json  2026-03-05T08-19-10Z__security-audit__sec.json  2026-03-05T08-20-21Z__test-coverage-audit__ta.json  2026-03-05T12-00-00Z__arch-review__ar.json
scripts/: download-schemas.sh  install-hooks.sh
testdata/mt/: mt103.txt  mt103_output.txt  mt940.txt
testdata/schemes/cbpr/: invalid_missing_uetr.xml  missing_bic.xml  valid_pacs008.xml
testdata/schemes/fednow/: invalid_eur.xml  over_limit.xml  valid_pacs008.xml
testdata/schemes/sepa/: invalid_usd.xml  valid_pacs008.xml
testdata/translation/mt103_pacs008/: input.txt
testdata/translation/mt202_pacs009/: input.txt
testdata/translation/mt940_camt053/: input.txt
testdata/xml/camt/: camt_029_001_12_minimal.xml  camt_053_001_11_minimal.xml  camt_054_001_11_minimal.xml  camt_056_001_11_minimal.xml
testdata/xml/head/: head_001_001_04_minimal.xml
testdata/xml/pacs/: pacs_002_001_14_minimal.xml  pacs_004_001_11_minimal.xml  pacs_008_001_13_minimal.xml  pacs_008_invalid_bic.xml  pacs_009_001_10_minimal.xml  pacs_028_001_05_minimal.xml
testdata/xml/pain/: pain_001_001_11_minimal.xml  pain_002_001_13_minimal.xml  pain_013_001_09_minimal.xml
