[package]
name = "mx20022-cli"
version = "0.1.1"
description = "CLI tool for inspecting, validating, and translating ISO 20022 and SWIFT MT financial messages"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mx20022-cli"
keywords = ["iso20022", "swift", "payments", "cli", "finance"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "mx20022-cli"
path = "src/main.rs"

[dependencies]
mx20022-parse = { workspace = true }
mx20022-validate = { workspace = true }
mx20022-translate = { workspace = true }
mx20022-codegen = { workspace = true }
mx20022-model = { workspace = true, features = ["all"] }
clap.workspace = true

[lints]
workspace = true
