[package]
name = "mx20022-codegen"
version = "0.1.1"
description = "XSD-to-Rust code generator for ISO 20022 message types with constraint validation"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mx20022-codegen"
keywords = ["iso20022", "xsd", "codegen", "payments", "finance"]
categories = ["development-tools", "encoding"]

[[bin]]
name = "mx20022-codegen"
path = "src/main.rs"

[dependencies]
quick-xml.workspace = true
thiserror.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
indexmap.workspace = true
prettyplease.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true

[lints]
workspace = true
