[package]
name = "mx20022-model"
version = "0.1.0"
description = "Generated and hand-written types for ISO 20022 financial messages"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["pacs"]
pacs = []
pain = []
camt = []
head = []
all = ["pacs", "pain", "camt", "head"]

[dependencies]
serde.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
