[package]
name = "mx20022-parse"
version = "0.2.0"
description = "XML parsing and serialization for ISO 20022 MX financial messages via quick-xml and serde"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mx20022-parse"
keywords = ["iso20022", "xml", "payments", "parsing", "finance"]
categories = ["encoding", "parser-implementations"]

[dependencies]
mx20022-model = { workspace = true, features = ["all"] }
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true
criterion.workspace = true

[[bench]]
name = "parse_bench"
harness = false

[lints]
workspace = true
