[package]
name = "mx20022-translate"
version = "0.1.0"
description = "Bidirectional MT to MX translation for ISO 20022 messages"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mx20022-model.workspace = true
mx20022-parse.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true

[[bench]]
name = "translate_bench"
harness = false

[lints]
workspace = true
