[package]
name = "mx20022-translate"
version = "0.1.1"
description = "Bidirectional SWIFT MTŌåöISO 20022 MX translation: MT103Ōåöpacs.008, MT202Ōåöpacs.009, MT940Ōåöcamt.053"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mx20022-translate"
keywords = ["iso20022", "swift", "mt103", "payments", "migration"]
categories = ["encoding", "parser-implementations"]

[dependencies]
mx20022-model = { workspace = true, features = ["camt"] }
mx20022-parse.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true

[[bench]]
name = "translate_bench"
harness = false

[lints]
workspace = true
