[package]
name = "mx20022-validate"
version = "0.1.1"
description = "ISO 20022 message validation: XSD constraints, IBAN/BIC/LEI rules, FedNow, SEPA, and CBPR+ scheme checks"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mx20022-validate"
keywords = ["iso20022", "validation", "payments", "fednow", "sepa"]
categories = ["encoding", "finance"]

[dependencies]
mx20022-model = { workspace = true, features = ["all"] }
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
mx20022-parse = { workspace = true }
mx20022-model = { workspace = true, features = ["all"] }
criterion.workspace = true

[[bench]]
name = "validate_bench"
harness = false

[lints]
workspace = true
